<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false">

        <TextView
            android:id="@+id/txNamaTempat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:padding="5dp"
            android:text="@string/namatempat"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txWaktu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="end"
            android:padding="5dp"
            android:text="21-09-2018 07:09" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/fotolokasi" />

    <ImageView
        android:id="@+id/img"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/txKeterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:padding="5dp"
        android:text="@string/masukan_fb" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/lines" />
</LinearLayout>

