<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/pombensin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="1.5"
                    android:theme="@style/RatingBar"
                    android:stepSize="1.0" />

                <TextView
                    android:id="@+id/txRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txNamaTempat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/namatempat" />

                <TextView
                    android:id="@+id/txJamBuka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jambuka" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>